--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^2.0.2",
     "pg": "^8.17.2",
     "pg-hstore": "^2.3.4",
+    "resend": "^6.8.0",
     "sequelize": "^6.37.7",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.3"
